<resources>
    <string name="app_name">KJShop</string>
    <string name="app_version">v 1.0.0</string>
    <string name="app_copy">"@ KJShop app"</string>
    <string name="side_nav_home_title">Home</string>
    <string name="side_nav_profile_title">Profile</string>
    <string name="side_nav_orders_title">Orders</string>
    <string name="side_nav_wishlist_title">Wishlist</string>
    <string name="side_nav_cart_title">Cart</string>
    <string name="side_nav_message_title">Message</string>
    <string name="side_nav_settings_title">Settings</string>
    <string name="side_nav_login_title">Login</string>
    <string name="side_nav_logout_title">Logout</string>
    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_category_title">Category</string>
    <string name="bottom_nav_cart_title">Cart</string>
    <string name="bottom_nav_profile_title">Profile</string>
    <string name="search_hint">Search here</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_voltmart">Login to VoltMart</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="signup_title">Join VoltMart</string>
    <string name="text_signin_account">Already have an account?</string>
    <string name="text_signout_account">or create a new account</string>
    <string name="text_password_message">Password must contain at least 6 characters</string>
    <string name="retype_password_text">Retype Password</string>
</resources>