<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:padding="50dp"
    tools:context=".activity.SignUpActivity">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"


        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signup_title"
        android:textColor="@color/md_theme_primary"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Name"
        android:textSize="12sp"
        android:textColor="@color/md_theme_primary" />

    <EditText
        android:id="@+id/signup_input_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:hint="KJ"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input_search" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Email"
        android:textSize="12sp"
        android:textColor="@color/md_theme_primary" />

    <EditText
        android:id="@+id/signup_input_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        android:hint="user@example.com"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input_search" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Password"
        android:textSize="12sp"
        android:textColor="@color/md_theme_primary" />

    <EditText
        android:id="@+id/signup_input_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input_search"
        android:hint="........"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password_message"
        android:textSize="12sp"
        android:layout_gravity="end"
        android:textColor="@color/md_theme_secondary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/retype_password_text"
        android:textSize="12sp"
        android:textColor="@color/md_theme_primary" />

    <EditText
        android:id="@+id/signup_input_retype_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input_search"
        android:hint="........"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_sign_up" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/text_signin_account"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_in" />

</LinearLayout>